Added image, description and link

--- a/recipes/Cookies.html
+++ b/recipes/Cookies.html
@@ -4,3 +4,8 @@
         <meta charset="UTF-8">
         <Title>Cookies</Title>
     </head>
+    <body>
+        <h1>Simple cookie recipe!</h1>
+        <img src="../images/chocolate-chip-cookies.jpg" alt="Chocolate chip cookies">
+        <h2>Learn how to make these delicious cookies!</h2>
+    </body>
