Completed the basics. Only used HTML. Turned into a fun website, finishing the Odin's assignment while also having fun with it.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
         <Title>Recipes</Title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <p><a href="recipes/Cookies.html">Cookies!</a></p>
+        <center>
+        <h1>Lecter recipes!</h1>
+        <img src="images/cooking.gif" alt="Man cooking">
+        <p><a href="recipes/Steak.html">Steak!</a></p>
+        <img src="images/hannibal food.png" width=500 height=215 alt="Man also cooking">
+        <p><a href="recipes/Chicken.html">Chicken Parm!</a></p>
+        <img src="images/hannibal oven.gif" width=500 height=215 alt="Man also cooking">
+        <p><a href="recipes/Wine.html">Wine recommendations!</p>
+        </center>
     </body>
 </html>
