--- a/recipes/Chicken.html
+++ b/recipes/Chicken.html
@@ -23,5 +23,5 @@
             <li>Then, bake in the oven for however long you can take the stench, and flip it once every twelve minutes. Remove from the oven when you want to, add the red weird sauce, and add the mozzarella cheese.</li>
             <li>Bake until the cheese melts and the voices in your head stop. After that you're good to go!</li>
         </ol>
-        <p>And that's how you make a chiken parm! Oh God the voices are talking again make it stopstopstopstopstopstopstopstopstopstopstopstop</p>
+        <p>And that's how you make a chicken parm! Oh God the voices are talking again make it stopstopstopstopstopstopstopstopstopstopstopstop</p>
     </body>
