--- a/recipes/Steak.html
+++ b/recipes/Steak.html
@@ -8,7 +8,7 @@
         <center>
         <h1>Steak salad!</h1>
         <img src="../images/steak.gif" alt="Man getting food from fridge">
-        <h2>Learn how to make a delicious stake salad!</h2>
+        <h2>Learn how to make a delicious steak salad!</h2>
         </center>
         <h3>Ingredients:</h3>
         <ul>
